--- a/mobile-app/backend/package.json
+++ b/mobile-app/backend/package.json
@@ -61,6 +61,7 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.2",
     "negotiator": "^0.6.3",
     "nodemailer": "^6.10.1",
     "object-inspect": "^1.13.4",
