--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   cached_network_image: ^3.4.1
@@ -15,6 +15,7 @@ dependencies:
   http: ^1.3.0
   shared_preferences: ^2.5.1
   image_picker: ^1.0.4
+  file_picker: ^10.1.2
 
 dev_dependencies:
   flutter_test:
@@ -66,5 +67,17 @@ flutter:
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
         - asset: assets/fonts/Poppins-Bold.ttf
-          weight: 900
+          weight: 700
+
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat/Montserrat-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Montserrat/Montserrat-Bold.ttf
+          weight: 600
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito/Nunito-ExtraLight.ttf
+          weight: 600
+
   uses-material-design: true
