--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.5.1
   image_picker: ^1.0.4
   file_picker: ^10.1.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
