--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs": "^0.3.24",
     "react": "^19.0.0",
