Fix Gradle Error

--- a/mobile-app/android/build.gradle
+++ b/mobile-app/android/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    ext.kotlin_version = '1.8.21'  // <-- Added this line
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"  // Kotlin plugin
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -15,4 +29,8 @@ subprojects {
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
+
+tasks.withType(JavaExec).configureEach {
+    environment "PATH", System.getenv("PATH") + ":/Users/beverlyaniasco/flutter/bin"
 }
