User profile changes

--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/images/event1.jpg
     - assets/images/event2.jpg
     - assets/images/try_eyewear.png
+    - assets/images/default_profile_icon.jpg
 
   fonts:
     - family: Poppins
