--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -17,9 +17,11 @@ dependencies:
   image_picker: ^1.0.4
   file_picker: ^10.1.2
   intl: ^0.18.1
-  camera: ^0.11.1
   google_mlkit_face_detection: ^0.13.1
   google_mlkit_commons: ^0.11.0
+  google_mlkit_face_mesh_detection: ^0.4.1
+  camera: ^0.10.5+5
+
 
 dev_dependencies:
   flutter_test:
