--- a/backend/package.json
+++ b/backend/package.json
@@ -64,7 +64,6 @@
     "multer": "^1.4.5-lts.2",
     "negotiator": "^0.6.3",
     "nodemailer": "^6.10.1",
-    "nodemon": "^3.1.10",
     "object-inspect": "^1.13.4",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
@@ -98,6 +97,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
