--- a/mobile-app/android/app/src/main/AndroidManifest.xml
+++ b/mobile-app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="aniasco_long_exam1"
+        android:label="Baobab Vision"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
