--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   assets:
@@ -64,6 +65,8 @@ flutter:
     - assets/images/try_eyewear.png
     - assets/images/default_profile_icon.jpg
     - assets/images/gcash.png
+    - assets/images/bvicon.png
+    - assets/images/bvicon-mobile.png
 
   fonts:
     - family: Poppins
@@ -78,9 +81,15 @@ flutter:
           weight: 500
         - asset: assets/fonts/Montserrat/Montserrat-Bold.ttf
           weight: 600
+
     - family: Nunito
       fonts:
         - asset: assets/fonts/Nunito/Nunito-ExtraLight.ttf
           weight: 600
 
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/bvicon-mobile.png"
