--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "etag": "^1.8.1",
     "express": "^4.21.2",
     "finalhandler": "^1.3.1",
+    "firebase": "^11.9.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
     "function-bind": "^1.1.2",
