--- a/mobile-app/pubspec.yaml
+++ b/mobile-app/pubspec.yaml
@@ -1,6 +1,6 @@
 name: baobab_vision_project
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -17,6 +17,9 @@ dependencies:
   image_picker: ^1.0.4
   file_picker: ^10.1.2
   intl: ^0.18.1
+  webview_flutter: ^4.13.0
+  flutter_inappwebview: ^6.1.5
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +65,6 @@ flutter:
     - assets/images/event1.jpg
     - assets/images/event2.jpg
     - assets/images/try_eyewear.png
-    - assets/images/default_profile_icon.jpg
-    - assets/images/gcash.png
 
   fonts:
     - family: Poppins
