--- a/web-app/package.json
+++ b/web-app/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs": "^0.3.24",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
